feat: postcss-test

--- a/webpack-test/src/components/index.less
+++ b/webpack-test/src/components/index.less
@@ -1,14 +1,23 @@
+@import url('../css/mixin.css');
+$bg-color: gray;
+
+.main p{
+  display: block;
+}
 .container {
   .header,
   .footer {
     font-size: 18px;
     font-weight: bold;
+    /* color: aqua; */
   }
   .main {
     padding: 10px 10px;
+    background: $bg-color;
     p {
       font-size: 14px;
       color: #333;
     }
   }
+
 }
